--- a/css/main.css
+++ b/css/main.css
@@ -409,7 +409,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   left: 53px;
   width: 45px;
   border-radius: 50%;
-  transition: transform 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
   animation: skull 1s linear;
 }
 .header .logo .brand:hover {
@@ -444,7 +444,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
 .header .menuIcons ul li a .icon {
   cursor: pointer;
   transform: scale(100%);
-  transition: transform 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 .header .menuIcons ul li a .icon:hover {
   transform: scale(120%);
@@ -454,7 +454,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   cursor: pointer;
   margin: 0px 5px;
   transform: scale(100%);
-  transition: transform 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 .header .menuIcons ul .wishHeadLine .wishlistIcon:hover, .header .menuIcons ul .wishHeadLine .cartIcon:hover, .header .menuIcons ul .cartShop .wishlistIcon:hover, .header .menuIcons ul .cartShop .cartIcon:hover {
   transform: scale(120%);
@@ -470,12 +470,12 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
-  background-color: #141414;
+  background-color: #1b1b1b;
   overflow: hidden;
   box-shadow: 0 0 10px 6px #070707;
   z-index: 10;
   transform: translate(-105%);
-  transition: 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 .header .menuSide .top {
   width: 100%;
@@ -483,7 +483,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  background-color: #181818;
+  background-color: #191919;
   padding: 10px 10px 10px 30px;
 }
 .header .menuSide .top .brand {
@@ -513,7 +513,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   width: 100%;
   list-style-type: none;
   cursor: pointer;
-  background-color: #141414;
+  background-color: #191919;
 }
 .header .menuSide .menu ul li .link {
   display: block;
@@ -544,8 +544,8 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   font-weight: 600;
   margin: 0px auto 0px 0px;
   padding-bottom: 15px;
-  border-bottom: 1px solid #6b6b6b;
-  transition: all 0.3s ease;
+  border-bottom: 1px solid #9c9c9c;
+  transition: all 0.3s ease-in-out;
 }
 .header .menuSide .menu ul li .cartShop .link:hover {
   background-color: rgba(188, 35, 40, 0.3490196078);
@@ -556,7 +556,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   flex-direction: column;
   justify-content: space-around;
   align-items: flex-start;
-  background-color: #181818;
+  background-color: #191919;
   padding-top: 10px;
 }
 .header .menuSide .contactUs p {
@@ -566,7 +566,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   color: #ffffff;
   font-weight: 600;
   padding-left: 30px;
-  border-bottom: 1px solid #6b6b6b;
+  border-bottom: 1px solid #9c9c9c;
   padding-bottom: 15px;
 }
 .header .menuSide .contactUs ul {
@@ -2783,7 +2783,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
-  background-color: #191919;
+  background-color: #1b1b1b;
   overflow: hidden;
   box-shadow: 0 0 10px 6px #070707;
   z-index: 10;
@@ -2796,7 +2796,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  background-color: #1b1b1b;
+  background-color: #191919;
   padding: 10px 10px 10px 30px;
 }
 .headerSignIn .menuSide .top .brand {
@@ -2827,7 +2827,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   width: 100%;
   list-style-type: none;
   cursor: pointer;
-  background-color: #1b1b1b;
+  background-color: #191919;
 }
 .headerSignIn .menuSide .menu ul li .link {
   display: block;
