Changing GiftCard's Letter color SASS

--- a/css/main.css
+++ b/css/main.css
@@ -960,7 +960,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   background-color: #bc2327;
 }
 .giftCards .containerGetOff .containerCards .sectionCards .card4:nth-child(4) .subtitleGift {
-  color: #9a9a9a;
+  color: #f1f1f1;
   font-weight: 700;
 }
 .giftCards .containerGetOff .containerMessage {
