--- a/scss/_gift_Card.scss
+++ b/scss/_gift_Card.scss
@@ -54,7 +54,7 @@
                 .card4:nth-child(4){
                     background-color: $primaryColor;
                     .subtitleGift{
-                        color: $secondaryColor;
+                        color: $backgroundColor;
                         font-weight:$ExtraBold;
                     }
                 }
