Improving NewArrivals code

--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -56,6 +56,13 @@ $btnBoxShadow:1px 5px 6px 2px #363636;
 $btnBoxShadowHover:0 0 6px 2px #BC2327;
 $boxShadowCard:0 0 4px 2px #707070;
 $boxShadowMenu:0 0 10px 6px #070707;
+$boxShadowNewArr:0 0 3px 1px #474747;
+$boxShadowNewArrHover:0 0 4px 3px #474747;
+$borderSkull: 2px solid #ffffff;
+
+// Animation
+
+$animationSkull:skull 2s linear infinite;
 
 
 // $shadowColor:;
