Udpating PurchaseOreder & PlaceOrder SASS

--- a/css/main.css
+++ b/css/main.css
@@ -929,7 +929,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
 .giftCards .containerGetOff .containerCards .sectionCards .card1, .giftCards .containerGetOff .containerCards .sectionCards .card2, .giftCards .containerGetOff .containerCards .sectionCards .card3, .giftCards .containerGetOff .containerCards .sectionCards .card4 {
   width: 100%;
   padding-top: 20px;
-  border-radius: 20px;
+  border-radius: 10px;
 }
 .giftCards .containerGetOff .containerCards .sectionCards .card1 .subtitleGift, .giftCards .containerGetOff .containerCards .sectionCards .card2 .subtitleGift, .giftCards .containerGetOff .containerCards .sectionCards .card3 .subtitleGift, .giftCards .containerGetOff .containerCards .sectionCards .card4 .subtitleGift {
   font-size: 3rem;
@@ -2744,7 +2744,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   z-index: 8;
   transform: translateY(0%);
   border-radius: 10px;
-  transition: 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 .sectionPlaceOrder .orderCross .crossCloseWhite {
   width: 25px;
@@ -2784,7 +2784,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   font-size: 1rem;
   font-family: "Jura", sans-serif;
   font-weight: 600;
-  color: #BC2327;
+  color: #bc2327;
 }
 .sectionPlaceOrder .unionOrder .delivery .deliveryContact .deliveryTitle {
   margin-top: 15px;
@@ -2813,7 +2813,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   font-size: 0.8rem;
   font-family: "Jura", sans-serif;
   font-weight: 600;
-  color: #BC2327;
+  color: #bc2327;
 }
 .sectionPlaceOrder .unionOrder .delivery .creditCards .paymentCards {
   width: 100%;
@@ -2840,7 +2840,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   font-size: 1rem;
   font-family: "Jura", sans-serif;
   font-weight: 600;
-  color: #BC2327;
+  color: #bc2327;
 }
 .sectionPlaceOrder .unionOrder .formPayment .payment input {
   width: 100%;
@@ -2863,12 +2863,12 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   font-family: "Jura", sans-serif;
   font-weight: 600;
   color: #ffffff;
-  border: 1px solid transparent;
-  background-color: #070707;
-  transition: all 0.3s ease;
+  border: 1px solid #000000;
+  background-color: #000000;
+  transition: all 0.3s ease-in-out;
 }
 .sectionPlaceOrder .unionOrder .formPayment .payment .btnPlaceOnOrder:hover {
-  color: #070707;
+  color: #000000;
   background-color: #ffffff;
   border: 1px solid #000000;
   font-weight: 600;
