--- a/scss/_place_Order.scss
+++ b/scss/_place_Order.scss
@@ -19,7 +19,7 @@
     align-items: center;
     overflow: hidden;
     background-color:#f3f3f31c;
-    box-shadow: 0 0 4px 2px #525252;
+    box-shadow:$placeOrderShadow;
     margin:7px auto;
     padding-top:35px;
     padding-bottom:30px;
@@ -27,7 +27,7 @@
     z-index: 8;
     transform: translateY(0%);
     border-radius: 10px;
-    transition: .3s ease-in-out;
+    transition: $transition;
     .orderCross{
         .crossCloseWhite{
             width:25px;
@@ -37,7 +37,7 @@
             right:-435px;
             z-index: 8;
             transform: rotate(0deg);
-            transition: all 0.3s ease-in-out;
+            transition: $transition;
             &:hover{
                 transform: rotate(90deg);
             }
@@ -53,19 +53,19 @@
             width:60%;
             height: 350px;
             margin-right:35px;
-            background-color: #ffffff;
+            background-color:$whiteColor;
             padding: 15px ;
-            border-radius: 10px;
+            border-radius: $borderRadius;
             .deliveryContact{
                 display:flex;
                 flex-direction: column;
                 align-items: flex-start;
                 row-gap: 4px;
                 .contactTitle, .deliveryTitle{
-                    font-size: 1rem;
+                    font-size: $regularText;
                     font-family: $fontJura;
-                    font-weight: 600;
-                    color: #BC2327;
+                    font-weight: $bold;
+                    color: $primaryColor;
                 }
                 .deliveryTitle{
                     margin-top:15px;
@@ -86,17 +86,17 @@
                     padding-bottom: 5px;
                     padding-left: 10px;
                     font-size: 0.8rem;
-                    border:1px solid #d9d9d9;
-                    border-radius: 5px;
+                    border:$borderForm;
+                    border-radius: $borderRadiusInput;
                 }
             }
             .creditCards{
                 .transactions{
                     margin:25px auto 5px;
-                    font-size: 0.8rem;
+                    font-size: $xSmallText;
                     font-family: $fontJura;
-                    font-weight: 600;
-                    color: #BC2327;
+                    font-weight: $bold;
+                    color: $primaryColor;
                 }
                 .paymentCards{
                     width:100%;
@@ -110,9 +110,9 @@
             flex-direction: column;
             justify-content: space-between;
             align-items: flex-start;
-            background-color: #ffffff;
+            background-color:$whiteColor;
             padding: 15px;
-            border-radius: 10px;
+            border-radius: $borderRadius;
             .payment{
                 width:100%;
                 display:flex;
@@ -120,19 +120,19 @@
                 align-items: flex-start;
                 row-gap: 4px;
                 .paymentTitle{
-                    font-size: 1rem;
+                    font-size:$regularText;
                     font-family: $fontJura;
-                    font-weight: 600;
-                    color: #BC2327;
+                    font-weight:$bold;
+                    color: $primaryColor;
                 }
                 input{
                     width:100%;
                     padding-top: 5px;
                     padding-bottom: 5px;
                     padding-left: 10px;
-                    font-size: 0.8rem;
-                    border:1px solid #d9d9d9;
-                    border-radius: 5px;
+                    font-size:$xSmallText;
+                    border:$borderForm;
+                    border-radius: $borderRadiusInput;
                 }
                 .btnPlaceOnOrder{
                     width: 100%;
@@ -142,18 +142,18 @@
                     justify-content: center;
                     align-items: center;
                     margin:75px auto 0px;
-                    font-size: 1rem;
+                    font-size: $regularText;
                     font-family: $fontJura;
                     font-weight: 600;
-                    color: #ffffff;
-                    border: 1px solid transparent;
-                    background-color: #070707;
-                    transition: all 0.3s ease;
+                    color: $whiteColor;
+                    border:$btnMenu;
+                    background-color: $blackColor;
+                    transition:$transition;
                     &:hover{
-                        color: #070707;
-                        background-color: #ffffff;
-                        border:1px solid #000000;
-                        font-weight: 600;
+                        color:$blackColor;
+                        background-color: $whiteColor;
+                        border:$btnMenu;
+                        font-weight:$bold;
                     }
                 }
             }
@@ -171,7 +171,7 @@
     backdrop-filter: blur(25px);
     filter: blur(10px);
     z-index: -1;
-    border-radius: 10px;
+    border-radius: $borderRadius;
 }
 .sectionPlaceOrder > * {
     position: relative;
