--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -58,7 +58,8 @@ $boxShadowCard:0 0 4px 2px #707070;
 $boxShadowMenu:0 0 10px 6px #070707;
 $boxShadowNewArr:0 0 3px 1px #474747;
 $boxShadowNewArrHover:0 0 4px 3px #474747;
-$borderSkull: 2px solid #ffffff;
+$placeOrderShadow: 0 0 4px 2px #525252;
+
 
 // Animation
 
@@ -98,7 +99,9 @@ $neutralMargin: 0px auto;
 
 
 // Border-radius
-$borderRadius:20px;
+$borderRadius:10px;
+$borderRadiusInput:5px;
+
 
 
 // Border
@@ -106,6 +109,8 @@ $borderTop:1px solid #3d3d3d;
 $borderBottom:1px solid #e4e4e4;
 $btnMenu:1px solid #000000;
 $FormBottom: 1px solid #9c9c9c;
+$borderSkull: 2px solid #ffffff;
+$borderForm:1px solid #d9d9d9;
 
 // $popUpsBorderRadius:;
 
