--- a/scss/_purchase_Order.scss
+++ b/scss/_purchase_Order.scss
@@ -25,7 +25,7 @@
     padding-bottom: 30px;
     transform: translateY(0%);
     overflow: hidden;
-    transition: .3s ease-in-out;
+    transition: $transition;
     #orderCross{
         display:none;
     }
@@ -38,15 +38,15 @@
             cursor:pointer;
             z-index:10;
             transform: rotate(0deg);
-            transition: all 0.3s ease-in-out;
+            transition: $transition;
             &:hover{
                 transform: rotate(90deg);
             }
         }
     }
     .breakaLeg{
-        color: #BC2327;
-        font-size: 1.8rem;
+        color: $primaryColor;
+        font-size: $nameLogo;
         font-family: $fontRubik;
     }
     .brand{
@@ -57,19 +57,24 @@
         text-align: center;
         margin: 20px auto;
         padding: 20px 40px;
-        background-color: #ffffff;
+        background-color:$whiteColor;
         border-radius: 10px;
         .done, .order, .number, .close{
             font-family: $fontJura;
-            font-size: 0.9rem;
-            font-weight: 700;
+            font-size: $smallText;
+            font-weight:$bold;
         }
         .done{
-            color: #BC2327;
+            color:$primaryColor;
         }
         .number{
-            color:#BC2327;
+            color:$primaryColor;
             padding: -10px;
+        }
+        .order{
+            font-size: $xSmallText;
+            font-weight:$MediumBold;
+
         }
         .cartCheck{
             width:50px;
@@ -77,15 +82,15 @@
         .close{
             width:100%;
             height:40px;
-            color:#ffffff;
-            background-color: #000000;
+            color:$whiteColor;
+            background-color:$blackColor;
             text-decoration: none;
             border: 1px solid #000000;
             transition: all .3s ease;
             &:hover{
-                background-color: #ffffff;
-                color:#000000;
-                border: 1px solid #000000;
+                background-color: $whiteColor;
+                color:$blackColor;
+                border: $btnMenu;
             }
         }
     }
