--- a/css/main.css
+++ b/css/main.css
@@ -3070,7 +3070,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   margin-top: -30px;
 }
 .bannerShipping .shipping {
-  color: #BC2327;
+  color: #bc2327;
   font-size: 0.8rem;
   font-weight: 700;
   font-family: "Jura", sans-serif;
