--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -12,7 +12,7 @@ $cardLetter:3rem;
 $LargeTitle :2.5rem;
 $nameLogo:1.8rem;
 $sentence:1.5rem;
-$MediumTitle :1.2rem;
+$MediumTitle:1.2rem;
 // $breakTitle:1.2rem;
 $regularText:1rem;
 $smallText:0.9rem;
@@ -111,6 +111,7 @@ $btnMenu:1px solid #000000;
 $FormBottom: 1px solid #9c9c9c;
 $borderSkull: 2px solid #ffffff;
 $borderForm:1px solid #d9d9d9;
+$itemProduct:1px solid #f1f1f1;
 
 // $popUpsBorderRadius:;
 
