Updating letter size SASS

--- a/scss/_show_Room.scss
+++ b/scss/_show_Room.scss
@@ -333,7 +333,7 @@
                                         width:50px;
                                     }
                                     .name, .date{
-                                        font-size: $breakText;
+                                        font-size: $BreakTextContent;
                                         font-weight: $ExtraBold;
                                     }
                                     .date{
