--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -18,7 +18,9 @@ $regularText:1rem;
 $smallText:0.9rem;
 $xSmallText:0.8rem;
 $xxSmallText:0.7rem;
+$BreakTextContent:0.6rem;
 $breakText:0.5rem;
+
 // $smallTitle:0.8rem;
 // $breakSmallText:0.7rem;
 // $xSmallParagraphText:0.6rem;
