--- a/scss/_filter.scss
+++ b/scss/_filter.scss
@@ -61,7 +61,7 @@
             font-size: $regularText;
             font-family: $fontJura;
             color: $secondaryColor;
-            font-weight: $MediumBold;
+            font-weight: $mediumBold;
             padding: 5px;
             margin: 50px 0px;
         }
