--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -103,7 +103,7 @@
             border-top: $borderTop;
             p{
                 font-family: $fontJura;
-                font-weight: $MediumBold;
+                font-weight: $mediumBold;
                 font-size: $breakText;
                 color:$secondaryColor;
                 margin: 0px 0px;
