--- a/scss/_gift_Card.scss
+++ b/scss/_gift_Card.scss
@@ -78,7 +78,7 @@
                 font-family: $fontJura;
                 color: $secondaryColor;
                 text-align: left;
-                font-weight: $MediumBold;
+                font-weight: $mediumBold;
                 .higthlighter{
                     color: $primaryColor;
                     font-weight: $bold;
