--- a/scss/_purchase_Order.scss
+++ b/scss/_purchase_Order.scss
@@ -73,7 +73,7 @@
         }
         .order{
             font-size: $xSmallText;
-            font-weight:$MediumBold;
+            font-weight:$mediumBold;
 
         }
         .cartCheck{
