--- a/scss/_sign_In_&_Create_Account.scss
+++ b/scss/_sign_In_&_Create_Account.scss
@@ -125,7 +125,7 @@
                         color:$blackColor;
                         font-family: $fontJura;
                         font-size: $smallText;
-                        font-weight: $MediumBold;
+                        font-weight: $mediumBold;
                         display: flex;
                         flex-direction: column;
                         justify-content: center;
@@ -135,7 +135,7 @@
                             width:100%;
                             color: $secondaryColor;
                             font-size: $xSmallText;
-                            font-weight: $RegularBold;
+                            font-weight: $regularBold;
                             font-family: $fontJura;
                             padding: 10px 0px 10px 10px;
                             border-top: transparent;
@@ -171,7 +171,7 @@
                             color: $secondaryColor;
                             font-size: $xSmallText;
                             font-family: $fontJura;
-                            font-weight:$SemiBold;
+                            font-weight:$semiBold;
                             margin-bottom:-15px;
                         }
                     }
@@ -200,7 +200,7 @@
                         width:50%;
                         color: $blackColor;
                         font-size:$smallText;
-                        font-weight: $MediumBold;
+                        font-weight: $mediumBold;
                         font-family: $fontJura;
                         display: flex;
                         flex-direction: column;
@@ -211,7 +211,7 @@
                             width:100%;
                             color: $secondaryColor;
                             font-size: $xSmallText;
-                            font-weight: $RegularBold;
+                            font-weight: $regularBold;
                             font-family: $fontJura;
                             padding: 10px 0px 10px 10px;
                             border-top: transparent;
@@ -247,7 +247,7 @@
                             color:$secondaryColor;
                             font-size:$xSmallText;
                             font-family: $fontJura;
-                            font-weight: $SemiBold;
+                            font-weight: $semiBold;
                             margin-bottom:-15px;
                         }
                     }
