--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -31,9 +31,9 @@ $breakText:0.5rem;
 
 // Font-Weight
 
-$RegularBold:300;
-$MediumBold:400;
-$SemiBold:500;
+$regularBold:300;
+$mediumBold:400;
+$semiBold:500;
 $bold:600;
 $ExtraBold:700;
 
