--- a/scss/_show_Room.scss
+++ b/scss/_show_Room.scss
@@ -284,7 +284,7 @@
                 .title{
                     .btnCollapse{
                         width:100%;
-                        font-weight: $ExtraBold;
+                        font-weight: $semiBold;
                         color: $blackColor;
                         background-color:$whiteColor;
                     }
@@ -350,7 +350,7 @@
                         align-items: center;
                         p{
                             font-size: $xSmallText;
-                            font-weight: $bold;
+                            font-weight: $mediumBold;
                             align-self: self-start;
                             span{
                                 color: $primaryColor;
