Updating ShowRoom boldweigth SASS

--- a/scss/_show_Room.scss
+++ b/scss/_show_Room.scss
@@ -311,7 +311,7 @@
                             }
                             .message{
                                 font-size:$xxSmallText;
-                                font-weight: $bold;
+                                font-weight: $mediumBold;
                                 span{
                                     color: $primaryColor;
                                     font-weight:$ExtraBold;
