Updating wishPrice at views SASS

--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -275,7 +275,7 @@ html{
                                     display: flex;
                                     flex-direction: column;
                                     margin-left:-40px;
-                                    .price{
+                                    .wishPrice{
                                         font-size: $regularText;
                                         font-family: $fontJura;
                                         color:$primaryColor;
