--- a/scss/_wish_List.scss
+++ b/scss/_wish_List.scss
@@ -17,13 +17,13 @@
     flex-direction: column;
     justify-content:flex-start;
     align-items: flex-start;
-    background-color: #ffffff;
+    background-color: $whiteColor;
     overflow: hidden;
-    box-shadow: 0 0 10px 6px #070707;
+    box-shadow: $boxShadowMenu;
     z-index: 10;
     padding-top: 60px;
     transform: translate(105%);
-    transition: .3s ease-in-out;
+    transition: $transition;
     .wishHeadLine{
         .closeCross{
             width:15px;
@@ -32,7 +32,7 @@
             top:20px;
             left:35px;
             transform: rotate(0deg);
-            transition: all 0.3s ease-in-out;
+            transition: $transition;
             &:hover{
                 transform: rotate(90deg);
             }
@@ -45,13 +45,13 @@
             flex-direction:column;
             justify-content: space-between;
             align-items:flex-start;
-            margin: 0px auto;
+            margin:  $neutralMargin;
             .wishlistWord{
                 width: inherit;
-                font-size: 1.3rem;
+                font-size: $MediumTitle;
                 font-family: $fontJura;
-                color:#BC2327;
-                font-weight: 600;
+                color:$primaryColor;
+                font-weight:$bold;
                 margin:0px ;
             }
             .wish{
@@ -61,12 +61,12 @@
                     justify-content: space-between;
                     align-items: flex-start;
                     padding: 20px 0px;
-                    border-bottom: 1px solid #e4e4e4;
+                    border-bottom: $borderBottom;
                     .titleWishlist{
-                        font-size: 1rem;
+                        font-size: $regularText;
                         font-family: $fontJura;
-                        color:#BC2327;
-                        font-weight: 600;
+                        color:$primaryColor;
+                        font-weight: $bold;
                         margin: 15px 0px;
                     }
                 }
@@ -77,7 +77,7 @@
                         justify-content: space-between;
                         align-items: center;
                         padding: 20px 0px;
-                        border-bottom: 1px solid #e4e4e4;
+                        border-bottom: $borderBottom;
                         .itemProduct{
                             width:15%;
                         }
@@ -86,10 +86,10 @@
                             flex-direction: column;
                             margin-left:-40px;
                             .wishPrice{
-                                font-size: 0.9rem;
+                                font-size: $regularText;
                                 font-family: $fontJura;
-                                color:#BC2327;
-                                font-weight: 600;
+                                color:$primaryColor;
+                                font-weight:$bold;
                             }
                             .icons{
                                 img{
